Sync up adaptor repos

--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,19 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 
-description = 'Cloud adaptors for Xenon.'
+version = '3.0.0'
+description = 'Grid adaptors for Xenon.'
+
+ext {
+    xenonVersion = '3.0.0'
+}
 
 apply from: 'gradle/common.gradle'
 apply from: 'gradle/adaptor.gradle'
 
 dependencies {
     // Adaptor dependencies.
-    compile group: 'nl.esciencecenter.xenon', name: 'xenon', version: '3.0.0'
+    compile group: 'nl.esciencecenter.xenon', name: 'xenon', version: xenonVersion
 
     // JGlobus (for gridftp)
     compile group: 'org.jglobus', name: 'gridftp', version: '2.1.0'
@@ -48,7 +53,7 @@ shadowJar {
 //   relocate 'javax', shadowPrefix + 'javax'
 
    dependencies {
-      exclude(dependency('nl.esciencecenter.xenon:xenon-core:3.0.0'))
+      exclude(dependency('nl.esciencecenter.xenon:xenon:.*'))
       exclude(dependency('org.slf4j::.*'))
    }
 }
